# comfyui-yolo-mask-process

./: LICENSE  README.md  main.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: detect and process.json
